--- a/workspace/20231007_CoupledEPCondensates.ipynb
+++ b/workspace/20231007_CoupledEPCondensates.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Enhancer-promoter interactions\n",
+    "# Coupled enhancer-promoter condensates\n",
     "\n",
     ":::{@fig-enhancer_promoter}\n",
     "![Enhancer and promoter regions on chromatin](_assets/EnhancerPromoter.png){fig-width=200px}\n",
@@ -17,7 +17,7 @@
     "$$\n",
     "\\begin{aligned}\n",
     "F(\\conc{P}(\\vec{x},t),\\conc{R}(\\vec{x},t))\n",
-    "&=\\rho_\\mathrm{P}(\\conc{P}-\\alpha)^2(\\conc{P}-\\beta)^2\\\\\n",
+    "&=\\int \\mathrm{d}\\vec x\\rho_\\mathrm{P}(\\conc{P}-\\alpha)^2(\\conc{P}-\\beta)^2\\\\\n",
     "&+\\rho_\\mathrm{R}\\conc{R}^2\\\\\n",
     "&-\\chi \\conc{P}\\conc{R}+c \\conc{P}^2\\conc{R}^2\\\\\n",
     "&+\\frac{\\kappa}{2}|\\nabla \\conc{P}|^2\\\\\n",
@@ -37,8 +37,8 @@
     "- Interfacial surface-tension\n",
     "$$\\frac{\\kappa}{2}|\\nabla \\conc{P}|^2$$\n",
     "- Chromatin\n",
-    "    - Double-stranded DNA $L_P\\approx 50$ nm [@bustamanteEntropicElasticityLPhage1994].\n",
-    "    - $L_C$ can be $10^6$ nm [@krivegaEnhancerPromoterInteractions2012].\n",
+    "    - Double-stranded DNA $L_P\\approx 50$ nm [@bustamanteEntropicElasticityLPhage1994], not chromatin with nucleosomes.\n",
+    "    - From base pair distance$L_C$ can be $10^6$ nm [@krivegaEnhancerPromoterInteractions2012], not chromatin with nucleosomes.\n",
     "    - $\\vec R$ can be 300 to 1000 nm [@choMediatorRNAPolymerase2018].\n",
     "    - Worm-like chain for $L_C\\approx L_P$ and $L_C> L_P$\n",
     "    - Harmonic potential for small deformations\n",
@@ -46,7 +46,7 @@
     "    - Gaussian chain for $L_C\\gg L_P$\n",
     "Using $l=L_P$ and $N=L_C/L_P$\n",
     "\n",
-    "$$F(\\vec R)=\\frac{k_B T}{2}\\left(\\frac{|\\vec R|^2}{L_CL_P}\\right)$$\n",
+    "$$F(\\vec R)=\\frac{3k_B T}{2}\\left(\\frac{|\\vec R|^2}{L_CL_P}\\right)$$\n",
     "\n",
     "## Dynamic equations\n",
     "\n",
