--- a/workspace/20231017_flow/generate_input.ipynb
+++ b/workspace/20231017_flow/generate_input.ipynb
@@ -11,15 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "locations = np.arange(0,10+0.5,0.5)\n",
-    "k_productions = np.arange(2,5+0.5,0.5)\n",
-    "sweeped_params = \"location,\" + str([[[i,0],[0,0]] for i in locations])\\\n",
-    "    + \"\\n\" +\"k_production,\" + str(list(k_productions))\n",
-    "with open(\"20231018_sweep_parameters.txt\",\"w\") as fhandle:\n",
+    "locations = np.arange(2,10+2,2)\n",
+    "background_conc = [3.5, 3.525, 3.55, 3.575]\n",
+    "k_productions =  [0.05,0.1,0.5]\n",
+    "reaction_sigmas = [2.5, 4]\n",
+    "kappas = [0.05,0.1]\n",
+    "seeds = [5.5, 4.5]\n",
+    "sweeped_params = (\n",
+    "    # f\"location, {str([[[i,0],[0,0]] for i in locations])}\\n\"\n",
+    "    f\"k_production, {str(k_productions)}\\n\"\n",
+    "    # f\"reaction_sigma, {str(reaction_sigmas)}\\n\"\n",
+    "    # f\"kappa_tilde, {kappas}\"\n",
+    "    f\"initial_values, {[[i,0.0] for i in background_conc]}\\n\"\n",
+    "    # f\"seed_value,{[[i,0] for i in seeds]}\\n\"\n",
+    "    )\n",
+    "with open(\"sweep_parameters.txt\",\"w\") as fhandle:\n",
     "    fhandle.write(sweeped_params)"
    ]
   }
