--- a/workspace/20231007_CoupledEPCondensates.ipynb
+++ b/workspace/20231007_CoupledEPCondensates.ipynb
@@ -63,8 +63,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "CoupledEPCondensates",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
