--- a/workspace/20231017_flow/20231025_analysis.ipynb
+++ b/workspace/20231017_flow/20231025_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = \"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/20231017_flow/20231021_output/\"\n",
-    "folders = [os.path.join(root,i) for i in os.listdir(root) if i.startswith(\"M_\")]\n",
-    "\n",
+    "root = Path(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/20231017_flow/20231117_output\")\n",
+    "folders = list(root.glob(\"./M1*\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def movies(folder):\n",
     "    try:\n",
     "        if os.path.isdir(os.path.join(folder,\"movies\")):\n",
@@ -46,7 +53,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def movies(folder):\n",
+    "    sim = simDir(folder)\n",
+    "    sim.run()\n",
+    "    sim.makeFigure(i=0)\n",
+    "    sim.makeFigure(i=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None, None, None, None, None, None]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pool = mp.Pool(processes=(mp.cpu_count() - 1))\n",
+    "pool.map(movies,folders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,175 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Submitted batch job 52421870\n",
-      "Submitted batch job 52421871\n",
-      "Submitted batch job 52421872\n",
-      "Submitted batch job 52421873\n",
-      "Submitted batch job 52421874\n",
-      "Submitted batch job 52421875\n",
-      "Submitted batch job 52421876\n",
-      "Submitted batch job 52421877\n",
-      "Submitted batch job 52421878\n",
-      "Submitted batch job 52421879\n",
-      "Submitted batch job 52421880\n",
-      "Submitted batch job 52421881\n",
-      "Submitted batch job 52421882\n",
-      "Submitted batch job 52421883\n",
-      "Submitted batch job 52421884\n",
-      "Submitted batch job 52421885\n",
-      "Submitted batch job 52421886\n",
-      "Submitted batch job 52421887\n",
-      "Submitted batch job 52421888\n",
-      "Submitted batch job 52421889\n",
-      "Submitted batch job 52421890\n",
-      "Submitted batch job 52421891\n",
-      "Submitted batch job 52421892\n",
-      "Submitted batch job 52421893\n",
-      "Submitted batch job 52421894\n",
-      "Submitted batch job 52421895\n",
-      "Submitted batch job 52421896\n",
-      "Submitted batch job 52421897\n",
-      "Submitted batch job 52421898\n",
-      "Submitted batch job 52421899\n",
-      "Submitted batch job 52421900\n",
-      "Submitted batch job 52421901\n",
-      "Submitted batch job 52421902\n",
-      "Submitted batch job 52421903\n",
-      "Submitted batch job 52421904\n",
-      "Submitted batch job 52421905\n",
-      "Submitted batch job 52421906\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Submitted batch job 52421907\n",
-      "Submitted batch job 52421908\n",
-      "Submitted batch job 52421909\n",
-      "Submitted batch job 52421910\n",
-      "Submitted batch job 52421911\n",
-      "Submitted batch job 52421912\n",
-      "Submitted batch job 52421913\n",
-      "Submitted batch job 52421914\n",
-      "Submitted batch job 52421915\n",
-      "Submitted batch job 52421916\n",
-      "Submitted batch job 52421917\n",
-      "Submitted batch job 52421918\n",
-      "Submitted batch job 52421919\n",
-      "Submitted batch job 52421920\n",
-      "Submitted batch job 52421921\n",
-      "Submitted batch job 52421922\n",
-      "Submitted batch job 52421923\n",
-      "Submitted batch job 52421924\n",
-      "Submitted batch job 52421925\n",
-      "Submitted batch job 52421926\n",
-      "Submitted batch job 52421927\n",
-      "Submitted batch job 52421928\n",
-      "Submitted batch job 52421929\n",
-      "Submitted batch job 52421930\n",
-      "Submitted batch job 52421931\n",
-      "Submitted batch job 52421932\n",
-      "Submitted batch job 52421933\n",
-      "Submitted batch job 52421934\n",
-      "Submitted batch job 52421935\n",
-      "Submitted batch job 52421936\n",
-      "Submitted batch job 52421937\n",
-      "Submitted batch job 52421938\n",
-      "Submitted batch job 52421939\n",
-      "Submitted batch job 52421940\n",
-      "Submitted batch job 52421941\n",
-      "Submitted batch job 52421942\n",
-      "Submitted batch job 52421943\n",
-      "Submitted batch job 52421944\n",
-      "Submitted batch job 52421945\n",
-      "Submitted batch job 52421946\n",
-      "Submitted batch job 52421948\n",
-      "Submitted batch job 52421947\n",
-      "Submitted batch job 52421949\n",
-      "Submitted batch job 52421950\n",
-      "Submitted batch job 52421951\n",
-      "Submitted batch job 52421953\n",
-      "Submitted batch job 52421952\n",
-      "Submitted batch job 52421954\n",
-      "Submitted batch job 52421955\n",
-      "Submitted batch job 52421956\n",
-      "Submitted batch job 52421957\n",
-      "Submitted batch job 52421958\n",
-      "Submitted batch job 52421959\n",
-      "Submitted batch job 52421960\n",
-      "Submitted batch job 52421961\n",
-      "Submitted batch job 52421962\n",
-      "Submitted batch job 52421963\n",
-      "Submitted batch job 52421964\n",
-      "Submitted batch job 52421965\n",
-      "Submitted batch job 52421966\n",
-      "Submitted batch job 52421967\n",
-      "Submitted batch job 52421968\n",
-      "Submitted batch job 52421969\n",
-      "Submitted batch job 52421970\n",
-      "Submitted batch job 52421971\n",
-      "Submitted batch job 52421972\n",
-      "Submitted batch job 52421973\n",
-      "Submitted batch job 52421974\n",
-      "Submitted batch job 52421975\n",
-      "Submitted batch job 52421976\n",
-      "Submitted batch job 52421977\n",
-      "Submitted batch job 52421978\n",
-      "Submitted batch job 52421979\n",
-      "Submitted batch job 52421980\n",
-      "Submitted batch job 52421981\n",
-      "Submitted batch job 52421982\n",
-      "Submitted batch job 52421983\n",
-      "Submitted batch job 52421984\n",
-      "Submitted batch job 52421985\n",
-      "Submitted batch job 52421986\n",
-      "Submitted batch job 52421987\n",
-      "Submitted batch job 52421988\n",
-      "Submitted batch job 52421989\n",
-      "Submitted batch job 52421990\n",
-      "Submitted batch job 52421991\n",
-      "Submitted batch job 52421992\n",
-      "Submitted batch job 52421993\n",
-      "Submitted batch job 52421994\n",
-      "Submitted batch job 52421995\n",
-      "Submitted batch job 52421996\n",
-      "Submitted batch job 52421997\n",
-      "Submitted batch job 52421998\n",
-      "Submitted batch job 52421999\n",
-      "Submitted batch job 52422000\n",
-      "Submitted batch job 52422001\n",
-      "Submitted batch job 52422002\n",
-      "Submitted batch job 52422003\n",
-      "Submitted batch job 52422004\n",
-      "Submitted batch job 52422005\n",
-      "Submitted batch job 52422006\n",
-      "Submitted batch job 52422007\n",
-      "Submitted batch job 52422008\n",
-      "Submitted batch job 52422009\n",
-      "Submitted batch job 52422010\n",
-      "Submitted batch job 52422011\n",
-      "Submitted batch job 52422012\n",
-      "Submitted batch job 52422013\n",
-      "Submitted batch job 52422014\n",
-      "Submitted batch job 52422015\n",
-      "Submitted batch job 52422016\n",
-      "Submitted batch job 52422017\n",
-      "Submitted batch job 52422018\n",
-      "Submitted batch job 52422019\n",
-      "Submitted batch job 52422020\n",
-      "Submitted batch job 52422021\n",
-      "Submitted batch job 52422022\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "script = \"/nfs/arupclab001/davidgoh/CoupledEPCondensates/utils/analysis/condensate_property_plot.slurm\"\n",
     "for folder in folders:\n",
@@ -302,14 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def movies(folder):\n",
-    "    try:\n",
-    "        sim = simDir(folder)\n",
-    "        sim.run()\n",
-    "        sim.makeFigure(i=0)\n",
-    "        sim.makeFigure(i=1)\n",
-    "    except:\n",
-    "        print(f\"Failed {folder}\")\n",
+    "\n",
     "\n",
     "def condensate_property_plot(folder):\n",
     "    cmap = mpl.colormaps[\"Paired\"].colors\n",
