--- a/workspace/20231017_flow/20231025_analysis.ipynb
+++ b/workspace/20231017_flow/20231025_analysis.ipynb
@@ -13,13 +13,21 @@
     "from utils.simulation_helper import set_mesh_geometry\n",
     "import multiprocessing as mp\n",
     "import h5py\n",
-    "from pathlib import Path\n",
     "from utils import plot\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "import numpy as np\n",
     "from scipy.ndimage import uniform_filter1d, gaussian_filter1d\n",
-    "from scipy.interpolate import splrep, splev\n",
+    "from scipy.interpolate import splrep, splev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
     "import subprocess"
    ]
   },
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +61,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submitted batch job 52667672\n",
+      "Submitted batch job 52667673\n",
+      "Submitted batch job 52667674\n",
+      "Submitted batch job 52667675\n",
+      "Submitted batch job 52667676\n",
+      "Submitted batch job 52667677\n",
+      "Submitted batch job 52667678\n",
+      "Submitted batch job 52667679\n",
+      "Submitted batch job 52667680\n",
+      "Submitted batch job 52667681\n",
+      "Submitted batch job 52667682\n",
+      "Submitted batch job 52667683\n",
+      "Submitted batch job 52667684\n",
+      "Submitted batch job 52667685\n",
+      "Submitted batch job 52667686\n",
+      "Submitted batch job 52667687\n",
+      "Submitted batch job 52667688\n",
+      "Submitted batch job 52667689\n",
+      "Submitted batch job 52667690\n",
+      "Submitted batch job 52667691\n",
+      "Submitted batch job 52667692\n",
+      "Submitted batch job 52667693\n",
+      "Submitted batch job 52667694\n",
+      "Submitted batch job 52667695\n",
+      "Submitted batch job 52667696\n",
+      "Submitted batch job 52667697\n",
+      "Submitted batch job 52667698\n",
+      "Submitted batch job 52667699\n",
+      "Submitted batch job 52667700\n",
+      "Submitted batch job 52667702\n",
+      "Submitted batch job 52667703\n",
+      "Submitted batch job 52667705\n",
+      "Submitted batch job 52667706\n",
+      "Submitted batch job 52667707\n",
+      "Submitted batch job 52667708\n",
+      "Submitted batch job 52667709\n",
+      "Submitted batch job 52667710\n",
+      "Submitted batch job 52667712\n",
+      "Submitted batch job 52667713\n",
+      "Submitted batch job 52667714\n",
+      "Submitted batch job 52667715\n",
+      "Submitted batch job 52667716\n",
+      "Submitted batch job 52667718\n",
+      "Submitted batch job 52667719\n",
+      "Submitted batch job 52667720\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = Path(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/20231017_flow/20231202_enhancerTest\")\n",
+    "folders = [root / p for p in root.iterdir() if p.match(\"M1*\")]\n",
+    "for folder in folders:\n",
+    "    if not (root / \"movies\").exists():\n",
+    "        subprocess.run([\"sbatch\",\n",
+    "                        f\"--export=input={folder}\",\n",
+    "                        \"/nfs/arupclab001/davidgoh/CoupledEPCondensates/utils/analysis/make_movie.slurm\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,21 +141,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[None, None, None, None, None, None, None, None, None]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submitted batch job 52474067\n",
+      "Submitted batch job 52474068\n",
+      "Submitted batch job 52474069\n",
+      "Submitted batch job 52474070\n",
+      "Submitted batch job 52474071\n",
+      "Submitted batch job 52474073\n",
+      "Submitted batch job 52474074\n",
+      "Submitted batch job 52474075\n",
+      "Submitted batch job 52474076\n",
+      "Submitted batch job 52474077\n",
+      "Submitted batch job 52474078\n",
+      "Submitted batch job 52474079\n",
+      "Submitted batch job 52474080\n",
+      "Submitted batch job 52474081\n",
+      "Submitted batch job 52474082\n",
+      "Submitted batch job 52474083\n",
+      "Submitted batch job 52474084\n",
+      "Submitted batch job 52474085\n"
+     ]
     }
    ],
    "source": [
+    "root = Path(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/20231017_flow/20231118_output_dt1e0\")\n",
+    "folders = [root / p for p in root.iterdir() if p.match(\"M1*\")]\n",
+    "for folder in folders:\n",
+    "    subprocess.run([\"sbatch\",\n",
+    "                    f\"--export=input={folder},fps=30\",\n",
+    "                    \"/nfs/arupclab001/davidgoh/CoupledEPCondensates/utils/analysis/make_movie.slurm\"])\n",
+    "root = Path(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/20231017_flow/20231118_output_dt5e-1\")\n",
+    "folders = [root / p for p in root.iterdir() if p.match(\"M1*\")]\n",
+    "for folder in folders:\n",
+    "    subprocess.run([\"sbatch\",\n",
+    "                    f\"--export=input={folder},fps=60\",\n",
+    "                    \"/nfs/arupclab001/davidgoh/CoupledEPCondensates/utils/analysis/make_movie.slurm\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = Path(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/20231017_flow/20231120_output\")\n",
+    "folders = [root / p for p in root.iterdir() if p.match(\"M1*\")]\n",
+    "for folder in folders:\n",
+    "    subprocess.run([\"sbatch\",\n",
+    "                    f\"--export=input={folder}\",\n",
+    "                    \"/nfs/arupclab001/davidgoh/CoupledEPCondensates/utils/analysis/make_movie.slurm\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def condensate_property(folder):\n",
+    "    sim = simDir(folder)\n",
+    "    sim.run()\n",
+    "    sim.condensate_property_plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = Path(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/20231017_flow/20231120_output\")\n",
+    "folders = [root / p for p in root.iterdir() if p.match(\"M1*\")]\n",
+    "processes = mp.Pool(mp.cpu_count()-1)\n",
+    "processes.map(condensate_property,folders);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_com(folder):\n",
+    "    sim = simDir(folder)\n",
+    "    sim.run()\n",
+    "    sim.condensate()\n",
+    "    np.savetxt(folder / \"com.txt\", sim.com)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = Path(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/20231017_flow/20231120_output\")\n",
+    "folders = [root / p for p in root.iterdir() if p.match(\"M1*\")]\n",
+    "processes = mp.Pool(mp.cpu_count()-1)\n",
+    "processes.map(save_com,folders);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folders = []\n",
+    "root = Path(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/20231017_flow/20231118_output_dt1e0\")\n",
+    "folders += [root / p for p in root.iterdir() if p.match(\"M1*\")]\n",
+    "root = Path(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/20231017_flow/20231118_output_dt5e-1\")\n",
+    "folders += [root / p for p in root.iterdir() if p.match(\"M1*\")]\n",
     "pool = mp.Pool(processes=(mp.cpu_count() - 1))\n",
     "pool.map(movies,folders)"
    ]
@@ -265,10 +442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "folders = []\n",
+    "root = Path(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/20231017_flow/20231118_output_dt1e0\")\n",
+    "folders += [root / p for p in root.iterdir() if p.match(\"M1*\")]\n",
+    "root = Path(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/20231017_flow/20231118_output_dt5e-1\")\n",
+    "folders += [root / p for p in root.iterdir() if p.match(\"M1*\")]"
+   ]
   }
  ],
  "metadata": {
