--- a/workspace/20231017_flow/20231114_phase_diagram.ipynb
+++ b/workspace/20231017_flow/20231114_phase_diagram.ipynb
@@ -2,79 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "from utils.file_operations import input_parse\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import tempfile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = Path(\"20231022_output\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'k_production': {0.01, 0.1, 1.0},\n",
-       " 'reaction_sigma': {2.5, 5.0},\n",
-       " 'seed_value': {(5, 0), (5.5, 0)},\n",
-       " 'location': {((2, 0), (0, 0)),\n",
-       "  ((4, 0), (0, 0)),\n",
-       "  ((6, 0), (0, 0)),\n",
-       "  ((8, 0), (0, 0)),\n",
-       "  ((10, 0), (0, 0))}}"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "dct_lst = []\n",
     "for file in root.glob(\"*/input_params.txt\"):\n",
+    "    fhandle = file.open()\n",
+    "    content = fhandle.read()\n",
+    "    file.write_text(content.replace(\"[\",\"(\").replace(\"]\",\")\"))\n",
     "    dct_lst.append(input_parse(file))\n",
     "total_dct = {}\n",
     "for dct in dct_lst:\n",
     "    for key in dct.keys():\n",
     "        total_dct[key] = [dct[key]] + total_dct.get(key,[])\n",
     "sweep_parameters = {k:set(v) for k, v in total_dct.items()}\n",
-    "sweep_parameters = {k:v for k, v in sweep_parameters.items() if len(v)>1}\n",
-    "sweep_parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.55\n",
-      "3.5\n",
-      "3.575\n",
-      "3.525\n"
-     ]
-    }
-   ],
-   "source": [
-    "for c in sweep_parameters[\"initial_values\"]:\n",
-    "    print(c[0])"
+    "sweep_parameters = [f\"{k},{tuple(v)}\\n\" for k, v in sweep_parameters.items() if len(v)>1]\n",
+    "(root / \"sweep_parameters_inferred.txt\").write_text(\"\".join(sweep_parameters))"
    ]
   },
   {
