--- a/workspace/04_Analysis/20240218_PhaseDiagramMoves.ipynb
+++ b/workspace/04_Analysis/20240218_PhaseDiagramMoves.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,8 @@
     "        return relevant_params | {\"rna_amount\": sim.rna_amount.flatten()[frame],\n",
     "                                \"condensate_com\": sim.com[frame,0],\n",
     "                                \"aspect_ratio\": sim.aspect_ratio[frame],\n",
-    "                                \"mask\": sim.xy[sim.mask[frame,:],:]}"
+    "                                \"mask\": sim.xy[sim.mask[frame,:],:],\n",
+    "                                \"concentration\": sim.concentration_profile[0][frame,:][sim.mask[frame,:]]}"
    ]
   },
   {
@@ -195,6 +196,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spd = springPhaseDiagram(root/\"20240116_PhaseDiagramSpringVsRestLengthCondensateMovesSeed\",\n",
+    "                         [\"k_tilde\", \"rest_length\"])\n",
+    "spd.extract_data(400)\n",
+    "spd.df.to_pickle(\"20240116_PhaseDiagramSpringVsRestLengthCondensateMovesSeed.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -253,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
