--- a/workspace/04_CoupledFlow/20240823_FixedLocusWithSensitivityLinear12.0/generate_input.ipynb
+++ b/workspace/04_CoupledFlow/20240823_FixedLocusWithSensitivityLinear12.0/generate_input.ipynb
@@ -6,16 +6,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.analysis.tools import simDir"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir = simDir(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/05_TimeDelay/20240223_PhaseDiagramHillFaster/M1_1.0_b_-0.25_g_-0.1_c_0.02_k_0.05_kp_0.2_c1_3.53_sw_1.0_sr_2.5_cn_5.5_l_10_M3_0.1_kt_0.0_rl_0.0_wd_0.0_t_250.0_kd_1.0\")"
+    "for i in np.arange(0,10+0.5,0.5):\n",
+    "    i = float(i)\n",
+    "    append = f\"\"\"location, (({i:.2f}, 0), (0, 0))\n",
+    "rest_length, ({i:.2f}, 0.0)\n",
+    "well_center, ({i:.2f}, 0.0)\n",
+    "    \"\"\"\n",
+    "    with open(\"_input_params.txt\") as fhandle:\n",
+    "        lines = fhandle.read()\n",
+    "    with open(f\"input_params{i:.2g}.txt\",\"w\") as fhandle:\n",
+    "        fhandle.write(lines + \"\\n\" + append)"
    ]
   }
  ],
@@ -35,7 +44,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
