--- a/workspace/04_CoupledFlow/20240218_PhaseDiagramSpringVsRestLengthCondensateMovesSeedHighRes/generate_input.ipynb
+++ b/workspace/04_CoupledFlow/20240218_PhaseDiagramSpringVsRestLengthCondensateMovesSeedHighRes/generate_input.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in np.arange(7,10+0.2,0.2):\n",
+    "for i in np.arange(7.0,9.4+0.1,0.1):\n",
     "    i = float(i)\n",
     "    append = f\"\"\"location, (({i:.2f}, 0), (0, 0))\n",
     "rest_length, ({i:.2f}, 0.0)\n",
@@ -25,6 +25,38 @@
     "        lines = fhandle.read()\n",
     "    with open(f\"input_params{i:.2g}.txt\",\"w\") as fhandle:\n",
     "        fhandle.write(lines + \"\\n\" + append)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "242"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np.arange(9,10+0.1,0.1))*len(np.logspace(-2,1,10+3*4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_tilde_list = np.logspace(-2,1,10+3*4)\n",
+    "k_tilde_str = \"k_tilde, (\" + \",\".join([f\"{i:.6g}\" for i in k_tilde_list]) + \")\\n\"\n",
+    "with open(\"sweep_parameters.txt\",\"w\") as fhandle:\n",
+    "    fhandle.write(k_tilde_str)"
    ]
   }
  ],
