--- a/workspace/08_Analysis/20240605_Observables.ipynb
+++ b/workspace/08_Analysis/20240605_Observables.ipynb
@@ -9,7 +9,8 @@
     "from utils.analysis.tools import simDir\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from scipy.ndimage import uniform_filter1d, gaussian_filter1d"
+    "from scipy.ndimage import uniform_filter1d, gaussian_filter1d\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -18,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = simDir(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/08_FreezeRNA/Shorter\")"
+    "sim = simDir(\"/nfs/arupclab001/davidgoh/CoupledEPCondensates/workspace/08_FreezeRNA/\")"
    ]
   },
   {
@@ -39,294 +40,6 @@
    "outputs": [],
    "source": [
     "sim.write_analysis()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!/usr/bin/env python\n",
-    "from utils.file_operations import input_parse\n",
-    "from utils.simulation_helper import set_mesh_geometry\n",
-    "from utils.analysis.make_movies import write_movies_two_component_2d\n",
-    "import os\n",
-    "import argparse\n",
-    "import h5py\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.spatial import  ConvexHull\n",
-    "import scipy.interpolate as interp\n",
-    "from sklearn.cluster import DBSCAN\n",
-    "from pathlib import Path\n",
-    "from typing import Union, Optional\n",
-    "from scipy.ndimage import gaussian_filter1d\n",
-    "import matplotlib as mpl\n",
-    "from utils import plot\n",
-    "import multiprocessing as mp\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "class selfDir:\n",
-    "    def __init__(self,\n",
-    "                 directory: str,\n",
-    "                 movie_parameters: str = \"movie_parameters.txt\"):\n",
-    "        self.directory = Path(directory)\n",
-    "\n",
-    "        # Parse selfulation parameter input. selfulation directories have this file by\n",
-    "        # default.\n",
-    "        self.params_file = self.directory / \"input_params.txt\"\n",
-    "        self.params = input_parse(self.params_file)\n",
-    "\n",
-    "        # selfulation directories have this file by default.\n",
-    "        self.hdf5_file: str =  self.directory / \"spatial_variables.hdf5\"\n",
-    "\n",
-    "        # Parse movie parameter input.\n",
-    "        self.movie_params_file = movie_parameters\n",
-    "        if os.path.isfile(self.movie_params_file):\n",
-    "            self.movie_params = input_parse(self.movie_params_file)\n",
-    "        elif self.params[\"n_concentrations\"] == 2.0:\n",
-    "            print(\"Using default movie parameters.\")\n",
-    "            self.movie_params = {'num_components': 2.0,\n",
-    "                                 'color_map': ['Blues', 'Reds'],\n",
-    "                                 'titles': ['Protein', 'RNA'],\n",
-    "                                 'figure_size': [15, 6]}\n",
-    "        elif self.params[\"n_concentrations\"] == 3.0:\n",
-    "            print(\"Using default movie parameters.\")\n",
-    "            self.movie_params = {'num_components': 3.0,\n",
-    "                                 'color_map': ['Blues', 'Reds', 'Greens'],\n",
-    "                                 'titles': ['Protein', 'RNA', 'Active Protein'],\n",
-    "                                 'figure_size': [22, 6]}\n",
-    "\n",
-    "    def run(self, geo: bool=True, hdf5: bool=True,\n",
-    "            plot_limits: bool=True, condensate: bool=True):\n",
-    "        if geo:\n",
-    "            # Load Gmsh geometry\n",
-    "            self.geometry = set_mesh_geometry(self.params)\n",
-    "            self.xy = self.geometry.mesh.cellCenters.value.T\n",
-    "        if hdf5:\n",
-    "            # Load concentration profile\n",
-    "            with h5py.File(self.hdf5_file, mode=\"r\") as concentration_dynamics:\n",
-    "                # Read concentration profile data from files\n",
-    "                self.concentration_profile = []\n",
-    "                for i in range(int(self.movie_params['num_components'])):\n",
-    "                    conc_arr = concentration_dynamics[f'c_{i}'][:]\n",
-    "                    conc_arr = conc_arr[~np.all(conc_arr == 0, axis=1)]\n",
-    "                    self.concentration_profile.append(conc_arr)\n",
-    "                if \"t\" in concentration_dynamics.keys():\n",
-    "                    self.time = concentration_dynamics[\"t\"][:]\n",
-    "                \n",
-    "            self.n_frames = len(self.concentration_profile[0])\n",
-    "        if plot_limits:\n",
-    "            self.getPlotLimits()\n",
-    "\n",
-    "    def makeSubdirectory(self, subdirectory:str):\n",
-    "        # Make a directory within the selfulation directory\n",
-    "        subdir_path = self.directory / subdirectory\n",
-    "        subdir_path.mkdir(exist_ok=True)\n",
-    "        return subdir_path\n",
-    "\n",
-    "    def getPlotLimits(self):\n",
-    "        # Get upper and lower limits of the concentration values from the concentration profile data\n",
-    "        self.plotting_range = []\n",
-    "        conc = self.concentration_profile\n",
-    "        for i in range(int(self.movie_params['num_components'])):\n",
-    "            # Check if plotting range is explicitly specified in movie_parameters\n",
-    "            if 'c{index}_range'.format(index=i) in self.movie_params.keys():\n",
-    "                self.plotting_range.append(self.movie_params['c{index}_range'.format(index=i)])\n",
-    "            else:\n",
-    "                min_value = conc[i].min()\n",
-    "                max_value = conc[i].max()\n",
-    "                self.plotting_range.append([min_value, max_value])\n",
-    "\n",
-    "    def makeMovie(self,fps):\n",
-    "        write_movies_two_component_2d(self.directory,\n",
-    "                                      self.hdf5_file.name,\n",
-    "                                      self.movie_params,\n",
-    "                                      self.geometry.mesh,\n",
-    "                                      fps = fps)\n",
-    "    def makeFigure(self,\n",
-    "                   i:int,\n",
-    "                   n_rows:int=4,\n",
-    "                   n_cols:int=4):\n",
-    "        n_frames = n_rows*n_cols\n",
-    "        subdir_path = self.makeSubdirectory(\"figures\")\n",
-    "        frames = np.linspace(0, self.concentration_profile[0].shape[0]-1, num=n_frames, dtype=int)\n",
-    "        fig = plt.figure(figsize=(6*(n_rows),6*(n_cols)))\n",
-    "        gs = fig.add_gridspec(n_rows,n_cols)\n",
-    "        axes = [fig.add_subplot(gs[i,j]) for i in range(n_cols) for j in range(n_rows)]\n",
-    "        for t, frame in enumerate(frames):\n",
-    "            # Generate and save plots\n",
-    "            # axes = axes.flatten()\n",
-    "            cs = axes[t].tricontourf(self.geometry.mesh.x,\n",
-    "                                     self.geometry.mesh.y,\n",
-    "                                     self.concentration_profile[i][frame],\n",
-    "                                     levels=np.linspace(int(self.plotting_range[i][0]*100)*0.01,\n",
-    "                                                        int(self.plotting_range[i][1]*100)*0.01,\n",
-    "                                                        256),\n",
-    "                                cmap=self.movie_params['color_map'][i])\n",
-    "            border = plt.Circle((0,0), self.params[\"radius\"],\n",
-    "                                color='tab:gray', fill=False, linewidth=2)\n",
-    "            axes[t].add_patch(border)\n",
-    "            axes[t].autoscale_view()\n",
-    "            axes[t].xaxis.set_tick_params(labelbottom=False, bottom=False)\n",
-    "            axes[t].yaxis.set_tick_params(labelleft=False, left=False)\n",
-    "            axes[t].set_aspect('equal', 'box')\n",
-    "            plt.setp(axes[t].spines.values(), visible=False)\n",
-    "        plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
-    "\n",
-    "        cbar = fig.colorbar(cs,\n",
-    "                            ax=axes,\n",
-    "                            ticks=np.linspace(int(self.plotting_range[i][0]*100)*0.01,\n",
-    "                                            int(self.plotting_range[i][1]*100)*0.01,\n",
-    "                                            3),\n",
-    "                            shrink=0.6\n",
-    "                            )\n",
-    "        cbar.ax.tick_params(labelsize=30)\n",
-    "        fig.suptitle(self.movie_params['titles'][i], fontsize=40)\n",
-    "        fig.savefig(fname=subdir_path /\n",
-    "            '{}.png'.format(self.movie_params['titles'][i]),\n",
-    "                    dpi=300, format='png')\n",
-    "        return fig\n",
-    "\n",
-    "    def condensate(self,\n",
-    "                   i:int=0,\n",
-    "                   resample_num_points:int=1000):\n",
-    "        self.threshold = self.params[\"c_bar_1\"]\n",
-    "        self.condensate_conc = self.concentration_profile[i].copy()\n",
-    "        self.mask = self.condensate_conc>self.threshold\n",
-    "        self.condensate_conc[~self.mask]=0\n",
-    "        self.com = ((self.condensate_conc*self.geometry.mesh.cellVolumes)\\\n",
-    "            @ self.xy)\\\n",
-    "            /np.tile((self.condensate_conc*self.geometry.mesh.cellVolumes)\\\n",
-    "            .sum(axis=1),(2,1)).T\n",
-    "\n",
-    "        edge_lst = []\n",
-    "        for n in range(len(self.mask)):\n",
-    "            condensate_coords = self.xy[self.mask[n]]\n",
-    "            if condensate_coords.size == 0:\n",
-    "                arr = np.empty((resample_num_points,2))\n",
-    "                arr[:] = np.nan\n",
-    "            else:\n",
-    "                arr = self.resample_path(condensate_coords,resample_num_points)\n",
-    "            edge_lst.append(arr)\n",
-    "        self.edge_arr = np.array(edge_lst)\n",
-    "        xydist = self.edge_arr.max(axis=1)-self.edge_arr.min(axis=1)\n",
-    "        self.aspect_ratio = xydist[:,0]/xydist[:,1]\n",
-    "        self.eccentricity = np.sqrt(np.where(self.aspect_ratio<1,1-self.aspect_ratio**2,1-1/self.aspect_ratio**2))\n",
-    "        self.radius = np.sqrt(((self.edge_arr-self.com[:,None,:])**2).sum(axis=2))\n",
-    "        self.radius_variance = np.var(self.radius,axis=1)\n",
-    "\n",
-    "    def n_condensate(self):\n",
-    "        n_cluster_lst = []\n",
-    "        for n in range(self.n_frames):\n",
-    "            n_clusters = self.dbscan(self.xy[self.mask[n]])\n",
-    "            n_cluster_lst.append(n_clusters)\n",
-    "        return np.array(n_cluster_lst)\n",
-    "\n",
-    "    def dbscan(self,\n",
-    "               coords:np.ndarray):\n",
-    "        db = DBSCAN(eps=0.3, min_samples=10).fit(coords)\n",
-    "        labels = db.labels_\n",
-    "        dbscan = len(set(labels)) - (1 if -1 in labels else 0)\n",
-    "        return dbscan\n",
-    "\n",
-    "    def resample_path(self,\n",
-    "                      points:np.ndarray,\n",
-    "                      num_points:Optional[int]=None):\n",
-    "        hull = ConvexHull(points)\n",
-    "        hull_path = hull.vertices\n",
-    "        boundary = points[hull_path, :]\n",
-    "        # Calculate the cumulative distance along the path\n",
-    "        distance = np.cumsum(np.sqrt(np.sum(np.diff(boundary, axis=0)**2, axis=1)))\n",
-    "        distance = np.insert(distance, 0, 0)  # Insert a 0 at the beginning\n",
-    "\n",
-    "        # Default number of resample points\n",
-    "        if not num_points:\n",
-    "            num_points = len(boundary)\n",
-    "\n",
-    "        # Interpolate boundary uniformly over the cumulative distance\n",
-    "        interp_func = interp.interp1d(distance, boundary, kind=\"linear\", axis=0)\n",
-    "        new_distances = np.linspace(0, distance[-1], 1000)\n",
-    "        new_points = interp_func(new_distances)\n",
-    "\n",
-    "        return new_points\n",
-    "\n",
-    "\n",
-    "    def condensate_property_plot(self):\n",
-    "        cmap = mpl.colormaps[\"Paired\"].colors\n",
-    "        if not hasattr(self,\"com\"):\n",
-    "            self.condensate()\n",
-    "        com = self.com[~np.isnan(self.com).any(axis=1),:]\n",
-    "        e = self.eccentricity[~np.isnan(self.eccentricity)]\n",
-    "        r = self.radius[~np.isnan(self.radius).any(axis=1),:]\n",
-    "        y = com[:,0]\n",
-    "        f = uniform_filter1d(y,5)\n",
-    "        fig, ax = plt.subplots(2,2)\n",
-    "        axes = np.ravel(ax)\n",
-    "        fig.set_size_inches((6,3))\n",
-    "        axes[0].plot(y,label=\"Raw\",color=cmap[0])\n",
-    "        axes[0].plot(f,label=\"Uniform filter\",color=cmap[1])\n",
-    "        axes[0].legend()\n",
-    "        axes[0].set_xlabel(\"Frame\")\n",
-    "        axes[0].set_ylabel(\"Distance\\nfrom locus\")\n",
-    "        axes[1].plot(com[:,0],-np.gradient(y),label=\"Raw\",color=cmap[0])\n",
-    "        axes[1].plot(com[:,0],-np.gradient(f),label=\"Uniform filter\",color=cmap[1])\n",
-    "        axes[1].set_xlabel(\"Distance\\nfrom locus\")\n",
-    "        axes[1].set_ylim(bottom=0)\n",
-    "        axes[1].set_ylabel(\"Condensate\\nvelocity\")\n",
-    "        axes[1].legend()\n",
-    "        axes[2].plot(e)\n",
-    "        axes[2].set_ylabel(\"Eccentricity\")\n",
-    "        axes[2].set_xlabel(\"Frame\")\n",
-    "        axes[3].plot(self.radius_variance)\n",
-    "        axes[3].set_ylabel(\"Radius\\nvariance\")\n",
-    "        axes[3].set_xlabel(\"Frame\")\n",
-    "        fig.tight_layout()\n",
-    "        self.makeSubdirectory(\"figures\")\n",
-    "        fig.savefig(self.directory / \"figures\" / \"condensate.png\")\n",
-    "\n",
-    "    def rna(self):\n",
-    "        volumes = self.geometry.mesh.cellVolumes\n",
-    "        volume_vector = np.reshape(volumes,(len(volumes),1))\n",
-    "        self.rna_amount = np.ravel(self.concentration_profile[1]@volume_vector)\n",
-    "    \n",
-    "    def write_analysis(self):\n",
-    "        dct = {}\n",
-    "        dct[\"time \"]= getattr(sim,\"time\",np.ones(sim.n_frames)*np.nan)\n",
-    "        dct[\"center_of_mass\"] = sim.com[:,0]\n",
-    "        dct[\"eccentricity\"] = sim.eccentricity\n",
-    "        dct[\"variance_of_radius\"] = sim.radius_variance\n",
-    "        dct[\"rna_amount\"] = sim.rna_amount\n",
-    "        df = pd.DataFrame.from_dict(dct,orient=\"index\").T\n",
-    "        df.to_csv(sim.directory / \"analysis.csv\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dct = {}\n",
-    "dct[\"time \"]= np.ravel(getattr(sim,\"time\",np.ones(sim.n_frames)*np.nan))\n",
-    "dct[\"center_of_mass\"] = sim.com[:,0]\n",
-    "dct[\"eccentricity\"] = sim.eccentricity\n",
-    "dct[\"variance_of_radius\"] = sim.radius_variance\n",
-    "dct[\"rna_amount\"] = sim.rna_amount\n",
-    "df = pd.DataFrame.from_dict(dct,orient=\"index\").T\n",
-    "df.to_csv(sim.directory / \"analysis.csv\")\n"
    ]
   }
  ],
