Fix small input file generation typo

--- a/workspace/04_CoupledFlow/20240803_StationaryLocus/generate_input.ipynb
+++ b/workspace/04_CoupledFlow/20240803_StationaryLocus/generate_input.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in array = np.arange(0, 10.5, 0.5):\n",
+    "for i in np.arange(0, 10.5, 0.5):\n",
     "    i = float(i)\n",
     "    append = f\"\"\"location, (({i:.2f}, 0), (0, 0))\n",
     "rest_length, ({i:.2f}, 0.0)\n",
