--- a/workspace/01_Analysis/Fig_1B.ipynb
+++ b/workspace/01_Analysis/Fig_1B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,9 +92,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:py.warnings:/nfs/arupclab001/davidgoh/CoupledEPCondensates/utils/analysis/tools.py:185: RuntimeWarning: invalid value encountered in divide\n",
+      "  self.com = ((self.condensate_conc*self.geometry.mesh.cellVolumes)\\\n",
+      "\n",
+      "WARNING:py.warnings:/nfs/arupclab001/davidgoh/CoupledEPCondensates/utils/analysis/tools.py:185: RuntimeWarning: invalid value encountered in divide\n",
+      "  self.com = ((self.condensate_conc*self.geometry.mesh.cellVolumes)\\\n",
+      "\n",
+      "WARNING:py.warnings:/nfs/arupclab001/davidgoh/CoupledEPCondensates/utils/analysis/tools.py:185: RuntimeWarning: invalid value encountered in divide\n",
+      "  self.com = ((self.condensate_conc*self.geometry.mesh.cellVolumes)\\\n",
+      "\n",
+      "WARNING:py.warnings:/nfs/arupclab001/davidgoh/CoupledEPCondensates/utils/analysis/tools.py:185: RuntimeWarning: invalid value encountered in divide\n",
+      "  self.com = ((self.condensate_conc*self.geometry.mesh.cellVolumes)\\\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "simdir_paths = [file.parent for file in sweep_directory.glob(\"./*/input_params.txt\")]\n",
     "processes = mp.Pool(40-1)\n",
@@ -103,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
